// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RatingStars /> renders with value of 0 1`] = `
<div
  aria-label="reviews.rating_stars"
  className="sg-1tckjm8-container ui-shared__rating-stars"
  data-test-id="ratedStars: 0"
  role="img"
>
  <div
    className="sg-170uo4n-emptyStars rating-stars-empty"
  >
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="1"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="2"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="3"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="4"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="5"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
  <div
    className="sg-8o0m3k-filledStars rating-stars-filled"
  />
</div>
`;

exports[`<RatingStars /> renders with value of 50 1`] = `
<div
  aria-label="reviews.rating_stars"
  className="sg-1tckjm8-container ui-shared__rating-stars"
  data-test-id="ratedStars: 2.5"
  role="img"
>
  <div
    className="sg-170uo4n-emptyStars rating-stars-empty"
  >
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="1"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="2"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="3"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="4"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="5"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
  <div
    className="sg-8o0m3k-filledStars rating-stars-filled"
  >
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="6"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="7"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="2"
    >
      <StarHalfIcon
        size="1em"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> renders with value of 100 1`] = `
<div
  aria-label="reviews.rating_stars"
  className="sg-1tckjm8-container ui-shared__rating-stars"
  data-test-id="ratedStars: 5"
  role="img"
>
  <div
    className="sg-170uo4n-emptyStars rating-stars-empty"
  >
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="1"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="2"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="3"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="4"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="5"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
  <div
    className="sg-8o0m3k-filledStars rating-stars-filled"
  >
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="6"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="7"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="8"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="9"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="10"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> should change rating on click 1`] = `
<div
  aria-label="reviews.rating_stars"
  className="sg-1tckjm8-container ui-shared__rating-stars"
  data-test-id="ratedStars: 5"
>
  <div
    className="sg-170uo4n-emptyStars rating-stars-empty"
  >
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
  <div
    className="sg-8o0m3k-filledStars rating-stars-filled"
  >
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="9"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="10"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> should change rating on click 2`] = `
<div
  aria-label="reviews.rating_stars"
  className="sg-1tckjm8-container ui-shared__rating-stars"
  data-test-id="ratedStars: 3.5"
>
  <div
    className="sg-170uo4n-emptyStars rating-stars-empty"
  >
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="sg-1jcir28-icon-iconGapSmall"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
  </div>
  <div
    className="sg-8o0m3k-filledStars rating-stars-filled"
  >
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      aria-hidden={true}
      className="sg-1jcir28-icon-iconGapSmall"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        size="1em"
      />
    </div>
    <div
      className="sg-1jcir28-icon-iconGapSmall"
      key="3"
    >
      <StarHalfIcon
        size="1em"
      />
    </div>
  </div>
</div>
`;
